--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="page">
 <div class="moteur">
-<img id="randomImage" src="images/start.png" alt="start">
+<img id="randomImage" src="images/start.png">
 <script>
 const images = [
   "rw02cups-r.jpg", "rw02cups.jpg", "rw02pentacles-r.jpg", "rw02pentacles.jpg",
