--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="title">
-<img src="images/tarot-title.png"></img>
+<a hrref="index.html"><img src="images/tarot-title.png"></img></a>
 </div>
 
 <div class="page">
