--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <title>Tarot</title>
 <link rel="icon" type="image/x-icon" href="images/tarot-icon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0;">
-    
+<meta property="og:title" content="Tarot Engine" />
+<meta property="og:description" content="Pick tarot cards" />
+<meta property="og:image" content="images/tarot-icon.png" />
+<meta property="og:url" content="https://truegiftcorp.github.io/tarot" />
 </head>
+
 <html>
 <body>
 
 <div class="title">
-<a href="index.html"><img src="images/tarot-title.png"></img></a>
+<a href="index.html"><img src="images/tarot-title.png"></a>
 </div>
 
 <div class="page">
