--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <meta property="og:description" content="Pick tarot cards" />
 <meta property="og:image" content="images/tarot-icon.png" />
 <meta property="og:url" content="https://truegiftcorp.github.io/tarot" />
+<meta property="twitter:title" content="Tarot Engine" />
+<meta property="twitter:description" content="Pick tarot cards" />
+<meta property="twitter:image" content="images/tarot-icon.png" />
+<meta property="twitter:url" content="https://truegiftcorp.github.io/tarot" />
 </head>
 
 <html>
