--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Tarot</title>
 <link rel="icon" type="image/x-icon" href="images/tarot-icon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+
+  <!-- Open Graph -->
 <meta property="og:title" content="Tarot Engine" />
 <meta property="og:description" content="Pick tarot cards" />
 <meta property="og:image" content="images/tarot-icon.png" />
@@ -10,6 +12,7 @@
 <meta property="twitter:description" content="Pick tarot cards" />
 <meta property="twitter:image" content="images/tarot-icon.png" />
 <meta property="twitter:url" content="https://truegiftcorp.github.io/tarot" />
+
 </head>
 
 <html>
