--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <a href="index.html"><img src="images/tarot-title.png"></a>
 </div>
 
+<div class="info">
+<a>Ask something, I will help you find the answer</a>
+</div>
+
 <div class="page">
 <div class="moteur">
 <img id="randomImage" src="images/start.png">
@@ -80,6 +84,13 @@ margin: -20px auto -34px;
 width: 333px;
 height: 111px;
 text-align: center;
+}
+.info{
+text-align: center;
+}
+.info a{
+color: white;
+font-size: 13px;
 }
 .page{
 width: auto; 
