--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </div>
 
 <div class="info">
-<a>Ask something, I will help you find the answer</a>
+<a>Ask something, I will help you find the answer.</a>
+<br>
+<a>Example:</a>
+<br>
+<a>How will my day go ?</a>
+<br>
 </div>
 
 <div class="page">
@@ -101,7 +106,7 @@ margin: 1px auto 1px;
 width: 555px;
 text-align: center;
 color: white;
-margin: 34px auto 20px;
+margin: 21px auto 20px;
 font-size: 51px;
 }
 .moteur img{
