--- a/index.html
+++ b/index.html
@@ -1,192 +1,11 @@
 <head>
-<title>Tarot</title>
+<title>Tarot-Engine</title>
 <link rel="icon" type="image/x-icon" href="images/tarot-icon.ico">
 <meta name="viewport" content="width=device-width, initial-scale=1.0;">
+<meta http-equiv="refresh" content="0; url=http://truegiftcorp.com/tarotengine" />
+<script type="text/javascript">window.location.href = "http://truegiftcorp.com/tarotengine"</script>
 <meta charset="UTF-8">
 </head>
-
-<html>
 <body>
-
-<div class="title">
-<img src="images/tarot-title.png">
-</div>
-<div class="info">
-<a>Ask something, I will help you find the answer.</a>
-<br>
-<a id="message"></a>
-<br>
-</div>
-<div class="clock "id="clock"></div>
-<div class="page">
-<div class="moteur">
-<a onclick="getCard(),playSound(),getMesssage()"><img id="card" src="images/start.png"></a>
-
-<script>
-const images = [
-  "rw02cups-r.jpg", "rw02cups.jpg", "rw02pentacles-r.jpg", "rw02pentacles.jpg",
-  "rw02swords-r.jpg", "rw02swords.jpg", "rw02wands-r.jpg", "rw02wands.jpg",
-  "rw03cups-r.jpg", "rw03cups.jpg", "rw03pentacles-r.jpg", "rw03pentacles.jpg",
-  "rw03swords-r.jpg", "rw03swords.jpg", "rw03wands-r.jpg", "rw03wands.jpg",
-  "rw04cups.jpg", "rw04pentacles-r.jpg", "rw04pentacles.jpg", "rw04swords.jpg",
-  "rw04wands-r.jpg", "rw04wands.jpg", "rw05cups-r.jpg", "rw05cups.jpg",
-  "rw05pentacles-r.jpg", "rw05pentacles.jpg", "rw05swords-r.jpg", "rw05swords.jpg",
-  "rw05wands-r.jpg", "rw05wands.jpg", "rw06cups-r.jpg", "rw06cups.jpg",
-  "rw06pentacles-r.jpg", "rw06pentacles.jpg", "rw06swords-r.jpg", "rw06swords.jpg",
-  "rw06wands-r.jpg", "rw06wands.jpg", "rw07cups-r.jpg", "rw07cups.jpg",
-  "rw07pentacles-r.jpg", "rw07pentacles.jpg", "rw07swords-r.jpg", "rw07swords.jpg",
-  "rw07wands-r.jpg", "rw07wands.jpg", "rw08pentacles-r.jpg", "rw08pentacles.jpg",
-  "rw08swords-r.jpg", "rw08swords.jpg", "rw08wands-r.jpg", "rw08wands.jpg",
-  "rw09cups-r.jpg", "rw09cups.jpg", "rw09pentacles-r.jpg", "rw09pentacles.jpg",
-  "rw09swords-r.jpg", "rw09swords.jpg", "rw09wands-r.jpg", "rw09wands.jpg",
-  "rw10cups-r.jpg", "rw10cups.jpg", "rw10pentacles-r.jpg", "rw10pentacles.jpg",
-  "rw10swords-r.jpg", "rw10swords.jpg", "rw10wands-r.jpg", "rw10wands.jpg",
-  "rwacecups-r.jpg", "rwacecups.jpg", "rwacepentacles-r.jpg", "rwacepentacles.jpg",
-  "rwaceswords-r.jpg", "rwaceswords.jpg", "rwacewands-r.jpg", "rwacewands.jpg",
-  "rwchariot-r.jpg", "rwchariot.jpg", "rwdeath-r.jpg", "rwdeath.jpg",
-  "rwdevil-r.jpg", "rwdevil.jpg", "rwemperor-r.jpg", "rwemperor.jpg",
-  "rwempress-r.jpg", "rwempress.jpg", "rwfool-r.jpg", "rwfool.jpg",
-  "rwhangedman-r.jpg", "rwhangedman.jpg", "rwhermit-r.jpg", "rwhermit.jpg",
-  "rwhierophant-r.jpg", "rwhierophant.jpg", "rwhighpriestess-r.jpg", "rwhighpriestess.jpg",
-  "rwjugement-r.jpg", "rwjugement.jpg", "rwjustice-r.jpg", "rwjustice.jpg",
-  "rwkingcups-r.jpg", "rwkingcups.jpg", "rwkingpentacles-r.jpg", "rwkingpentacles.jpg",
-  "rwkingswords-r.jpg", "rwkingswords.jpg", "rwkingwands-r.jpg", "rwkingwands.jpg",
-  "rwknightcups-r.jpg", "rwknightcups.jpg", "rwknightpentacles-r.jpg", "rwknightpentacles.jpg",
-  "rwknightswords-r.jpg", "rwknightswords.jpg", "rwknightwands-r.jpg", "rwknightwands.jpg",
-  "rwlovers-r.jpg", "rwlovers.jpg", "rwmagician-r.jpg", "rwmagician.jpg",
-  "rwmoon-r.jpg", "rwmoon.jpg", "rwpagecups-r.jpg", "rwpagecups.jpg",
-  "rwpagepentacles-r.jpg", "rwpagepentacles.jpg", "rwpageswords-r.jpg", "rwpageswords.jpg",
-  "rwpagewands-r.jpg", "rwpagewands.jpg", "rwqueencups-r.jpg", "rwqueencups.jpg",
-  "rwqueenpentacles-r.jpg", "rwqueenpentacles.jpg", "rwqueenswords-r.jpg", "rwqueenswords.jpg",
-  "rwqueenwands-r.jpg", "rwqueenwands.jpg", "rwstar-r.jpg", "rwstar.jpg",
-  "rwstrength-r.jpg", "rwstrength.jpg", "rwsun-r.jpg", "rwsun.jpg",
-  "rwtemperance-r.jpg", "rwtemperance.jpg", "rwtower-r.jpg", "rwtower.jpg",
-  "rwwheelfortune-r.jpg", "rwwheelfortune.jpg", "rwworld-r.jpg", "rwworld.jpg"
-];                    
-function getCard() {
-const randomIndex = Math.floor(Math.random() * images.length);
-document.getElementById("card").src = `tarotcards/${images[randomIndex]}`;
-}
-function playSound() {
-var audio = new Audio('audio/tarotengine-sound-fx.mp3');
-audio.volume = 0.2;
-audio.play();
-}
-const messageElement = document.getElementById("message");
-const messages = {
-morning: [
-"How will my day go ? ☀️",
-"Give me an advice to start my day",
-"What will happen today ?"
-],
-afternoon: [
-"What's planned for me this afternoon 🌞",
-"how will my afternoon go ? 🌞",
-"How to have success in my work today ? 🛠️"
-],
-evening: [
-"What's going to happen this evening ?",
-"Any question",
-"Give me an advice for tonight"
-],
-night: [
-"How will my night go ? 🌙",
-"How to make my dreams come true ? ✨",
-"How to make my wishes come true ? ✨"
-]
-};
-function getRandomMessage(list) {
-const index = Math.floor(Math.random() * list.length);
-return list[index];
-}
-function getMesssage() {
-const date = new Date();
-const hour = date.getHours();
-let message = "";
-if(hour >= 6 && hour < 12){
-message = getRandomMessage(messages.morning);
-}else if(hour >= 12 && hour < 18){
-message = getRandomMessage(messages.afternoon);
-}else if(hour >= 18 && hour < 22){
-message = getRandomMessage(messages.evening);
-}else{
-message = getRandomMessage(messages.night);
-}
-messageElement.textContent = message;
-}
-window.addEventListener("load", getMesssage);
-function getClock() {
-const date = new Date();
-let hours = date.getHours();
-let minutes = date.getMinutes();
-let seconds = date.getSeconds();
-hours = hours < 10 ? "0" + hours : hours;
-minutes = minutes < 10 ? "0" + minutes : minutes;
-seconds = seconds < 10 ? "0" + seconds : seconds;
-const time = hours + ":" + minutes + ":" + seconds;
-document.getElementById("clock").textContent = time;
-}
-setInterval(getClock, 1000);
-getClock();
-</script>
-
-<br>
-<br>
-</div>   
-</div> 
+Redirecting to <a href='http://truegiftcorp.com/tarotengine'></a>.
 </body>
-</html>
-    
-<style>
-body{
-background: url('images/background.gif') #3e3437 repeat 0px 0px;
-}
-.clock{
-text-align: center;
-color: white;
-margin: 0px auto 0px;
-}
-.title {
-text-align: center;
-margin: -20px auto -34px;
-}
-.title img{
-width: 333px;
-height: 111px;
-text-align: center;
-}
-.info{
-text-align: center;
-color:white;
-}
-.info a{
-color: white;
-font-size: 13px;
-}
-.page{
-width: auto; 
-text-align: center;
-color: white;
-margin: 1px auto 1px;
-}
-.page img{
-width: 555px;
-text-align: center;
-color: white;
-margin: 21px auto 20px;
-font-size: 51px;
-}
-.moteur img{
-width: 150px;
-height: 300px;
-outline: solid #3f27bb 3px;  
-box-shadow: 0px 0px 15px 14px #3f27bb;
-
-animation: fadeIn 3s; 
-}
-@keyframes fadeIn {
-0% { opacity: 0; }
-100% { opacity: 1; }
-}
-</style>
-    
