--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
-<head>
-<title>Tarot-Engine</title>
-<link rel="icon" type="image/x-icon" href="images/tarot-icon.ico">
-<meta name="viewport" content="width=device-width, initial-scale=1.0;">
-<meta http-equiv="refresh" content="0; url=http://truegiftcorp.com/tarotengine" />
-<script type="text/javascript">window.location.href = "http://truegiftcorp.com/tarotengine"</script>
-<meta charset="UTF-8">
-</head>
+
 <body>
-Redirecting to <a href='http://truegiftcorp.com/tarotengine'></a>.
+Redirecting to <a href='http://truegiftcorp.com/tarotengine'>truegiftcorp.com</a>.
 </body>
